join us button now redirects to google form

--- a/frontend/src/components/Button.css
+++ b/frontend/src/components/Button.css
@@ -9,6 +9,9 @@
   font-family: inherit;
   line-height: 21px;
   width: fit-content;
+  display: inline-block;
+  text-decoration: none;
+  text-align: center;
 }
 
 .button-primary {
